--- a/Client/Dt.App/Model/Params/EditUserParams.xaml
+++ b/Client/Dt.App/Model/Params/EditUserParams.xaml
@@ -5,14 +5,6 @@
     xmlns:a="using:Dt.Base"
     Title="参数编辑">
 
-    <a:Mv.Menu>
-        <a:Menu>
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
-            <a:Mi ID="保存" Icon="保存" Click="OnSave" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
-            <a:Mi ID="删除" Icon="删除" Click="OnDel" />
-        </a:Menu>
-    </a:Mv.Menu>
-
     <a:Fv x:Name="_fv">
         <a:CText ID="ID" Title="参数名" />
         <a:CText ID="Value" Title="缺省值" />
@@ -20,4 +12,14 @@
         <a:CTip ID="ctime" Title="创建时间" />
         <a:CTip ID="mtime" Title="修改时间" />
     </a:Fv>
+
+    <a:Mv.Menu>
+        <a:Menu>
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
+            <a:Mi x:Name="_mi" ID="保存" Icon="保存" Click="OnSave" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
+            <a:Mi ID="删除" Icon="删除" Click="OnDel" />
+            <a:Mi ID="用户设置" Icon="设置" Click="OnUserSetting" />
+        </a:Menu>
+    </a:Mv.Menu>
+
 </a:Mv>
