--- a/Client/Dt.App/Home/MyMain.xaml
+++ b/Client/Dt.App/Home/MyMain.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl
+﻿<a:Mv
     x:Class="Dt.App.Home.MyMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    Title="我的">
 
     <a:Fv x:Name="_fv">
         <a:CLink Click="OnEditInfo" RowSpan="2">
@@ -32,4 +33,4 @@
             <Button Content="退出登录" Click="OnExit" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </a:CBar>
     </a:Fv>
-</UserControl>
+</a:Mv>
