--- a/Client/Dt.App/Model/User/UserAccountWin.xaml
+++ b/Client/Dt.App/Model/User/UserAccountWin.xaml
@@ -1,29 +1,28 @@
 ﻿<a:Win
-    x:Class="Dt.App.DefaultHome"
+    x:Class="Dt.App.Model.UserAccountWin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:home="using:Dt.App.Home"
-    AutoSaveLayout="False">
+    xmlns:l="using:Dt.App.Model">
 
     <a:Pane>
         <a:Tabs>
-            <a:Tab Order="1" Icon="主页">
-                <home:RootMenu x:Name="_menu" />
+            <a:Tab Order="1">
+                <l:UserAccountList x:Name="_list" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
     <a:Main>
         <a:Tabs>
-            <a:Tab Order="2" Title="动态" Icon="心电">
-                
+            <a:Tab>
+                <l:EditUserAccount x:Name="_edit" />
             </a:Tab>
         </a:Tabs>
     </a:Main>
     <a:Pane Pos="Right">
         <a:Tabs>
-            <a:Tab Order="3">
-                <home:MyMain x:Name="_my" />
+            <a:Tab>
+                <l:UserRoleList x:Name="_roleList" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
