--- a/Client/Dt.App/Model/Role/RolePrvList.xaml
+++ b/Client/Dt.App/Model/Role/RolePrvList.xaml
@@ -1,9 +1,9 @@
 ﻿<a:Mv
-    x:Class="Dt.App.Model.UserRoleList"
+    x:Class="Dt.App.Model.RolePrvList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="关联角色">
+    Title="授予权限">
 
     <a:Mv.Menu>
         <a:Menu>
@@ -22,7 +22,7 @@
             </a:Menu>
         </a:Ex.Menu>
         <DataTemplate>
-            <a:Dot ID="rolename" Margin="10,0,10,0" />
+            <a:Dot ID="prvid" Margin="10,0,10,0" />
         </DataTemplate>
     </a:Lv>
 </a:Mv>
