--- a/Client/Dt.App/Model/Params/UserParamsForm.xaml
+++ b/Client/Dt.App/Model/Params/UserParamsForm.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Mv
-    x:Class="Dt.App.Model.EditUserParams"
+    x:Class="Dt.App.Model.UserParamsForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
