--- a/Client/Dt.App/Model/Params/UserParamsWin.xaml
+++ b/Client/Dt.App/Model/Params/UserParamsWin.xaml
@@ -25,7 +25,7 @@
     <a:Pane Pos="Right">
         <a:Tabs>
             <a:Tab>
-                <l:EditUserParams x:Name="_edit" />
+                <l:UserParamsForm x:Name="_form" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
