--- a/Client/Dt.App/Model/User/UserAccountForm.xaml
+++ b/Client/Dt.App/Model/User/UserAccountForm.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Mv
-    x:Class="Dt.App.Model.EditUserAccount"
+    x:Class="Dt.App.Model.UserAccountForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
