--- a/Client/Dt.Sample/ModuleView/ManyToMany/MainWin.xaml
+++ b/Client/Dt.Sample/ModuleView/ManyToMany/MainWin.xaml
@@ -1,31 +1,28 @@
 ﻿<a:Win
-    x:Class="Dt.Sample.MyEntityWin"
+    x:Class="Dt.Sample.ModuleView.MainWin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:l="using:Dt.Sample">
+    xmlns:l="using:Dt.Sample.ModuleView">
 
     <a:Pane>
         <a:Tabs>
-            <a:Tab>
-                <a:SearchMv x:Name="_search" Placeholder="名称" Search="OnSearch">
-                    <x:String>全部</x:String>
-                    <x:String>最近修改</x:String>
-                </a:SearchMv>
+            <a:Tab Order="1">
+                <l:MainList x:Name="_list" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
     <a:Main>
         <a:Tabs>
-            <a:Tab Order="1">
-                <l:MyEntityList x:Name="_list" />
+            <a:Tab>
+                <l:MainForm x:Name="_form" />
             </a:Tab>
         </a:Tabs>
     </a:Main>
     <a:Pane Pos="Right">
         <a:Tabs>
             <a:Tab>
-                <l:MyEntityForm x:Name="_form" />
+                <l:MainRelatedList x:Name="_relatedList" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
