--- a/Client/Dt.App/Workflow/Mgr/WfTemplateMgr.xaml
+++ b/Client/Dt.App/Workflow/Mgr/WfTemplateMgr.xaml
@@ -6,20 +6,20 @@
 
     <a:Pane>
         <a:Tabs>
-            <a:Tab Order="1" Title="查找">
-                <a:SearchFv Placeholder="流程模板名称" Search="OnSearch">
-                    <a:CBar Title="常用" />
-                    <Button Content="全部" />
-                    <Button Content="最近修改" />
-                </a:SearchFv>
+            <a:Tab Title="搜索">
+                <a:SearchMv Placeholder="流程模板名称" Search="OnSearch">
+                    <x:String>全部</x:String>
+                    <x:String>最近修改</x:String>
+                </a:SearchMv>
             </a:Tab>
         </a:Tabs>
     </a:Pane>
     <a:Main>
         <a:Tabs>
-            <a:Tab Order="2" Title="列表">
+            <a:Tab Order="1" Title="列表">
                 <a:Tab.Menu>
                     <a:Menu>
+                        <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
                         <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
                     </a:Menu>
                 </a:Tab.Menu>
