--- a/Client/Dt.App/Workflow/Mgr/WfInstMgr.xaml
+++ b/Client/Dt.App/Workflow/Mgr/WfInstMgr.xaml
@@ -45,7 +45,7 @@
                         </a:Menu>
                     </a:Ex.Menu>
                     <a:Cols>
-                        <a:Col ID="Status" Title="状态" UI="Enum" Format="Dt.App.Workflow.WfiPrcStatus,Dt.App" Width="60" />
+                        <a:Col ID="Status" Title="状态" Width="60" />
                         <a:Col ID="Name" Title="表单名称" Width="200" />
                         <a:Col ID="Ctime" Title="创建时间" Width="120" />
                         <a:Col ID="Mtime" Title="最后修改时间" Format="yyyy-MM-dd HH:mm:ss" Width="180" />
@@ -59,9 +59,9 @@
             <a:Tab Title="活动实例">
                 <a:Lv x:Name="_lvAtv" ViewMode="Table" ItemClick="OnAtvClick">
                     <a:Cols>
-                        <a:Col ID="Status" Title="状态" UI="Enum" Format="Dt.App.Workflow.WfiAtvStatus,Dt.App" Width="60" />
+                        <a:Col ID="Status" Title="状态" Width="60" />
                         <a:Col ID="Name" Title="活动名称" Width="200" />
-                        <a:Col ID="instcount" Title="工作项数" Width="80" />
+                        <a:Col ID="instcount" Title="工作项数" Width="100" />
                     </a:Cols>
                 </a:Lv>
             </a:Tab>
@@ -70,8 +70,8 @@
             <a:Tab Title="工作项">
                 <a:Lv x:Name="_lvItem" ViewMode="Table">
                     <a:Cols>
-                        <a:Col ID="Status" Title="状态" UI="Enum" Format="Dt.App.Workflow.WfiItemStatus,Dt.App" Width="60" />
-                        <a:Col ID="AssignKind" Title="指派方式" UI="Enum" Format="Dt.App.Workflow.WfiItemAssignKind,Dt.App" Width="100" />
+                        <a:Col ID="Status" Title="状态" Width="60" />
+                        <a:Col ID="AssignKind" Title="指派方式" Width="100" />
                         <a:Col ID="sendprc" Title="发送者 -> 执行者" Width="180" />
                         <a:Col ID="IsAccept" Title="已签收" Width="80" />
                         <a:Col ID="mtime" Title="最后修改时间" Format="yyyy-MM-dd HH:mm:ss" Width="180" />
