--- a/Client/Dt.Sample/ModuleView/OneToMany2/ShoppingList.xaml
+++ b/Client/Dt.Sample/ModuleView/OneToMany2/ShoppingList.xaml
@@ -1,18 +1,18 @@
-﻿<a:Mv
-    x:Class="$rootnamespace$.$maincls$$childcls$List"
+<a:Mv
+    x:Class="Dt.Sample.ModuleView.OneToMany2.ShoppingList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:l="using:$rootnamespace$"
-    Title="$childtitle$列表">
+    Title="购物列表">
 
     <a:Mv.Menu>
         <a:Menu>
-            <a:Mi ID="添加" Icon="加号" Click="OnAdd" IsEnabled="False" />
+            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnToSearch" />
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
         </a:Menu>
     </a:Mv.Menu>
 
-    <a:Lv x:Name="_lv">
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick" DataChanged="OnDataChanged">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="编辑" Icon="编辑" Click="OnEdit" />
@@ -20,7 +20,9 @@
             </a:Menu>
         </a:Ex.Menu>
         <DataTemplate>
-            <a:Dot ID="name" Margin="10,0,10,0" />
+            <StackPanel Padding="10">
+                <a:Dot ID="Reason" />
+            </StackPanel>
         </DataTemplate>
     </a:Lv>
 </a:Mv>
