--- a/Tools/Dt/OnToMany/TwoList.xaml
+++ b/Tools/Dt/OnToMany/TwoList.xaml
@@ -8,11 +8,17 @@
     <a:Mv.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnToSearch" />
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
         </a:Menu>
     </a:Mv.Menu>
 
-    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick" DataChanged="OnDataChanged">
+        <a:Ex.Menu>
+            <a:Menu>
+                <a:Mi ID="编辑" Icon="编辑" Click="OnEdit" />
+                <a:Mi ID="删除" Icon="删除" Click="OnDel" />
+            </a:Menu>
+        </a:Ex.Menu>
         <DataTemplate>
             <StackPanel Padding="10">
                 <a:Dot ID="name" />
