--- a/Client/Dt.Sample/ListView/LvViewBase.xaml
+++ b/Client/Dt.Sample/ListView/LvViewBase.xaml
@@ -71,6 +71,15 @@
                 </StackPanel>
             </Grid>
         </DataTemplate>
+
+        <DataTemplate x:Key="Toolbar">
+            <a:Menu>
+                <a:Mi ID="姓名" a:Ex.Sort="xm" />
+                <a:Mi ID="出生日期" a:Ex.Sort="chushengrq desc" />
+                <a:Mi ID="视图" Icon="汉堡" Click="OnToggleViewMode" />
+                <a:Mi ID="筛选" Icon="漏斗" Click="OnFilter" />
+            </a:Menu>
+        </DataTemplate>
     </a:Win.Resources>
     
     <a:Main>
@@ -136,13 +145,17 @@
                             <Button Content="默认色" Click="OnDefPressedBrush" />
                         </StackPanel>
                     </a:CFree>
-                    <Button Content="自动行高" Click="OnAutoHeight" />
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="自动行高" Click="OnAutoHeight" />
+                        <Button Content="设置工具栏" Click="OnToolbar" />
+                        <Button Content="删除工具栏" Click="OnDelToolbar" />
+                    </StackPanel>
                     
                     <a:CBar Title="附加事件" />
                     <StackPanel Orientation="Horizontal">
-                        <CheckBox Content="行单击事件" Click="OnRowClick" Margin="10,0,0,0" />
-                        <CheckBox Content="选择变化事件" Click="OnSelectionChangedClick" />
-                        <CheckBox Content="行双击事件" Click="OnRowDoubleClick" />
+                        <CheckBox Content="行单击" Click="OnRowClick" Margin="10,0,0,0" />
+                        <CheckBox Content="选择变化" Click="OnSelectionChangedClick" />
+                        <CheckBox Content="行双击" Click="OnRowDoubleClick" />
                     </StackPanel>
                     
                     <a:CBar Title="行操作" />
