--- a/Client/Dt.Sample/ListView/LvViewBase.xaml
+++ b/Client/Dt.Sample/ListView/LvViewBase.xaml
@@ -74,10 +74,10 @@
 
         <DataTemplate x:Key="Toolbar">
             <a:Menu>
-                <a:Mi ID="姓名" a:Ex.Sort="xm" />
-                <a:Mi ID="出生日期" a:Ex.Sort="chushengrq desc" />
+                <a:Mi ID="姓名" CmdParam="xm" />
+                <a:Mi ID="出生日期" CmdParam="chushengrq desc" />
                 <a:Mi ID="视图" Icon="汉堡" Click="OnToggleViewMode" />
-                <a:Mi ID="筛选" Icon="漏斗" Click="OnFilter" />
+                <a:Mi ID="筛选" Icon="漏斗" CmdParam="#Filter" />
             </a:Menu>
         </DataTemplate>
     </a:Win.Resources>
