--- a/Client/Dt.App/Publish/Manager/PublishMgr.xaml
+++ b/Client/Dt.App/Publish/Manager/PublishMgr.xaml
@@ -6,8 +6,8 @@
 
     <a:Pane InitWidth="240">
         <a:Tabs>
-            <a:Tab Title="功能列表">
-                <a:Lv x:Name="_lv" Style="{StaticResource MainInfoLv}" ItemClick="OnMainInfoClick" />
+            <a:Tab>
+                <a:NavList x:Name="_nav" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
