为上架到商店，样例设为主页

--- a/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
+++ b/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
@@ -33,7 +33,7 @@
                 <StackPanel VerticalAlignment="Center">
                     <a:Dot ID="Icon" FontSize="30" HorizontalAlignment="Center" />
                     <a:Dot ID="Title" HorizontalAlignment="Center" />
-                    <a:Dot ID="Desc" Font="小灰" VerticalContentAlignment="Top" HorizontalAlignment="Left" />
+                    <a:Dot ID="Desc" Font="小灰" HorizontalAlignment="Center" />
                 </StackPanel>
                 <a:Dot ID="Warning" UI="Warning" HorizontalAlignment="Right" VerticalAlignment="Top" />
             </Grid>
