--- a/Client/Dt.Sample/SamplesMain.xaml
+++ b/Client/Dt.Sample/SamplesMain.xaml
@@ -3,23 +3,19 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="控件样例">
+    Title="样例">
 
-    <a:Pane InitWidth="630">
+    <a:Pane>
         <a:Tabs>
-            <a:Tab Title="列表">
-                <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick" ItemHeight="100">
-                    <DataTemplate>
-                        <Grid Padding="10">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <a:Dot ID="Title" HorizontalAlignment="Center" />
-                            <a:Dot ID="Note" Font="小灰" TextWrapping="Wrap" Grid.Row="1" />
-                        </Grid>
-                    </DataTemplate>
-                </a:Lv>
+            <a:Tab Order="1" Icon="词典">
+                <a:NavList x:Name="_navControl" Title="控件" To="NewWin" ViewMode="Tile" SelectionMode="None" />
+            </a:Tab>
+        </a:Tabs>
+    </a:Pane>
+    <a:Pane Pos="Right">
+        <a:Tabs>
+            <a:Tab Order="2" Icon="搬运工">
+                <a:NavList x:Name="_navModule" Title="模块" To="NewWin" SelectionMode="None" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
