--- a/Client/Dt.App/Home/RootMenu.xaml
+++ b/Client/Dt.App/Home/RootMenu.xaml
@@ -14,9 +14,9 @@
 
     <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick">
         <DataTemplate>
-            <Grid Padding="15">
+            <Grid Padding="12">
                 <StackPanel VerticalAlignment="Center">
-                    <a:Dot ID="Icon" UI="Icon" FontSize="30" />
+                    <a:Dot ID="Icon" UI="Icon" FontSize="30" Foreground="{StaticResource 主题蓝色}" Margin="0,0,0,4" HorizontalAlignment="Center" />
                     <a:Dot ID="Name" HorizontalAlignment="Center" />
                 </StackPanel>
                 <a:Dot ID="Warning" UI="Warning" HorizontalAlignment="Right" VerticalAlignment="Top" />
