--- a/Client/Dt.Sample/ModuleView/NavListDemo.xaml
+++ b/Client/Dt.Sample/ModuleView/NavListDemo.xaml
@@ -11,7 +11,13 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <a:Dot ID="Icon" FontSize="20" Margin="0,0,10,0" VerticalAlignment="Center" HorizontalContentAlignment="Center" />
+                <a:Dot ID="Icon"
+                       FontSize="20"
+                       Padding="10"
+                       Margin="0,0,10,0"
+                       Foreground="White"
+                       Background="{StaticResource 主题蓝色}"
+                       VerticalAlignment="Center" />
                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                     <a:Dot ID="Title" />
                     <a:Dot ID="Desc" Font="小灰" VerticalAlignment="Top" HorizontalAlignment="Left" />
