--- a/Client/Dt.App/Home/GroupMenu.xaml
+++ b/Client/Dt.App/Home/GroupMenu.xaml
@@ -19,11 +19,11 @@
             <TextBlock x:Name="_tb" VerticalAlignment="Center" Margin="20,0,20,0" />
         </Border>
 
-        <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick" ItemHeight="80" Grid.Row="1">
+        <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick" Grid.Row="1">
             <DataTemplate>
-                <Grid Padding="10">
+                <Grid Padding="12">
                     <StackPanel VerticalAlignment="Center">
-                        <a:Dot ID="Icon" UI="Icon" FontSize="30" />
+                        <a:Dot ID="Icon" UI="Icon" FontSize="30" Foreground="{StaticResource 主题蓝色}" Margin="0,0,0,4" HorizontalAlignment="Center" />
                         <a:Dot ID="Name" HorizontalAlignment="Center" />
                     </StackPanel>
                 </Grid>
